Update JCov support for JDK 9 (modules)